--- a/mario2.html
+++ b/mario2.html
@@ -14,12 +14,11 @@
 
 <body>
 
-<canvas id="stage" width="400" height="400" style="margin:50px auto; outline:1px dashed #ccc"></canvas>
+<canvas id="stage" width="400" height="400" style="display: block; margin:50px auto; outline:1px dashed #ccc" oncontextmenu="return false"></canvas>
 <script type="text/javascript">
 /**
 TODO
-- Fixing up spirte sheets (use mario_movements.png_
-- click to move
+-- Setup event delegation hash (~BB)
 - world, backgrounds, collidables, other entities, fights, rooms, rpg points, etc...
 - World creator (persistent data)
 - MVP-ify (separate data about entities from views (sprites)
@@ -74,9 +73,19 @@ var Game = (function() {
 		createjs.setFPS = 60;
 		
 		// Create mario	entity
-		Game.mario = new Mario({ stage: Game.stage });
-		Game.addChild(Game.mario);
-	}
+		Game.hero = new Mario({ stage: Game.stage });
+		Game.addChild(Game.hero);
+		
+		// Click to move hero
+		$('#stage').on("mousedown", Game.handleMouseDown);
+	},
+	
+	Game.handleMouseDown = function(e) {
+		// Right click -> move hero
+		if(e.button === 2) {
+			Game.hero.moveTo(e.offsetX, e.offsetY);
+		}
+	},
 	
 	Game.addChild = function(entity) {
 		if(!entity.animation) { throw new Error("Cannot add entity to stage: Entity is missing animation property"); }
@@ -105,7 +114,7 @@ var Entity = (function() {
 	var _degreeMap = {
 		// 0 is "right"
 		// PI is "left"
-		// In fractions of 2 (multiple my PI to get radians)
+		// In fractions of 2 (radians / PI)
 		down				: [(15/8), (1/8)],
 		downRight		: [(1/8), (3/8)],
 		right				: [(3/8), (5/8)],
@@ -213,10 +222,14 @@ var Entity = (function() {
 			// Set sprite animation
 			this.animation.gotoAndPlay(this.direction);
 			
-			// Tween queue
-			this.queue = createjs.Tween.get(this.animation);
 			// Animate to location
-			this.queue.to({ x: toX, y: toY }, 1000, createjs.Ease.quadInOut).call(this.stop);
+			this.getQueue({ override: true }).to({ x: toX, y: toY }, 1000, createjs.Ease.quadInOut).call(this.stop);
+		},
+		
+		getQueue: function(options) {
+			options || (options = {});
+			// Tween queue
+			return this.queue = createjs.Tween.get(this.animation, options);
 		},
 		
 		// Stops the sprite animation, and shows "standing" frame
