--- a/mario2.html
+++ b/mario2.html
@@ -12,152 +12,17 @@
 <script type="text/javascript" src="../lib/simpleInheritance.js"></script>
 <script type="text/javascript" src="lib/EventListener.js"></script>
 
+<script type="text/javascript" src="lib/createjs.World.js"></script>
+<script type="text/javascript" src="lib/createjs.Entity.js"></script>
+<script type="text/javascript" src="lib/createjs.Hero.js"></script>
 
-<script type="text/javascript" src="lib/World.js"></script>
-<script type="text/javascript" src="lib/Entity.js"></script>
+<script type="text/javascript" src="Game/Game.js"></script>
+<script type="text/javascript" src="Game/Game.Mario.js"></script>
 </head>
 
 <body>
 
 <canvas id="stage" width="400" height="400" style="display: block; margin:50px auto; outline:1px dashed #ccc" oncontextmenu="return false"></canvas>
-<script type="text/javascript">
-/**
-TODO
--- Setup event delegation hash (~BB)
-- world, backgrounds, collidables, other entities, fights, rooms, rpg points, etc...
-- World creator (persistent data)
-- MVP-ify (separate data about entities from views (sprites)
-*/
-
-var Game = (function() {
-	var Game = new Backbone.Marionette.Application();
-	
-	Game.vent = new Backbone.Marionette.EventAggregator();
-	
-	Game.images = {
-		mario_movements: "sprites/mario_movements.png",
-		mario: "sprites/supermariorpg_mario_sheet.png",
-		yoshi: "sprites/supermariorpg_yoshis_sheet.png",
-		sand: "textures/sand.png"
-	};
-	
-	Game.entities = {};
-	
-	Game.loadImages = function(images, callback) {
-		var loaded = 0;
-		var length = _.keys(images).length;
-		var countLoads;
-
-		callback || (callback = function() {});
-		
-		countLoads = function() {
-			loaded++;
-			if(loaded == length) {
-				Game.vent.trigger("images:loaded", images);
-				callback();
-			}
-		}
-		
-		// overwrite image src's with Image objects
-		for(name in images) {
-			var src = images[name];
-			images[name] = new Image();
-			images[name].src = src;
-			images[name].onerror = function() { throw new Error("Unable to load image (src: " + src + ")"); };
-			images[name].onload = countLoads;
-		}
-	}
-	
-	Game.init = function() {
-		// Setup stage
-		Game.canvas = document.getElementById("stage");
-		Game.stage = new createjs.Stage(Game.canvas);
-		Game.world = new World({
-			stage: Game.stage,
-			pattern: Game.images.sand,
-			width:2000, height: 2000,
-			startPosition: { x: 0, y: 0},
-			scrollBounds: 50,
-			scrollVelocity: 20
-		});
-		Game.stage.addChild(Game.world.container);
-
-		// setup ticker
-		if(Game.tick) { createjs.Ticker.addListener(Game.tick); }
-		createjs.useRAF = true;
-		createjs.setFPS = 60;
-		
-		// Create mario	entity
-		Game.hero = new Mario({ stage: Game.stage, world: Game.world });
-		Game.world.addChild(Game.hero);
-		Game.stage.update();
-		
-		// Click to move hero
-		$('#stage').on("mousedown", Game.handleMouseDown);
-		Game.world.container.addEventListener("onClick", function(e) {
-			console.log("stageX: ", e.stageX, " worldX: ", e.stageX - Game.world.container.x);
-		});
-	},
-	
-	Game.handleMouseDown = function(e) {
-		// Right click -> move hero
-		/*if(e.button === 2) {
-			Game.hero.moveTo(e.offsetX, e.offsetY);
-		}*/
-	},
-	
-	Game.addChild = function(entity) {
-		if(!entity.animation) { throw new Error("Cannot add entity to stage: Entity is missing animation property"); }
-		Game.world.addChild(entity.animation);
-		Game.stage.update();
-	}
-	
-	Game.loadAssets = function() {
-		Game.loadImages(Game.images);
-	}
-	
-	// Start the game when assets are load
-	Game.addInitializer(function() {
-		Game.loadAssets();
-		
-		// Initialize when assets are 
-		Game.bindTo(Game.vent, "images:loaded", Game.init, Game);
-	});
-	
-	return Game;
-})();
-
-
-var Mario = (function() {
-	var self = Entity.extend({
-		startingPosition: { x: 200, y: 200 },
-		
-		movements: [
-			{ direction: "down",			frames: [0, 1, 0, 2] },
-			{ direction: "downRight", frames: [3, 4, 3, 5] },
-			{ direction: "right",			frames: [6, 7, 6, 8] },
-			{ direction: "upRight", 	frames: [9, 10, 9, 11] },
-			{ direction: "up", 				frames: [12, 13, 12, 14] },
-			{ direction: "upLeft", 	frames: [15, 16, 15, 17] },
-			{ direction: "left",			frames: [18, 19, 18, 20] },
-			{ direction: "downLeft", 		frames: [21, 22, 21, 23] },
-		],
-		
-		spriteOptions: {
-			images: [Game.images.mario_movements],
-			frames: { width: 100, height: 100, regX: 50, regY: 90 },
-			frequency: 3
-		},
-		
-		tick: function() {
-			this._super();
-		}
-	});
-	
-	return self;
-})();
-
-</script>
 <script type="text/javascript">
 $(document).ready(function() {
 	Game.start();
