--- a/world.html
+++ b/world.html
@@ -13,7 +13,7 @@
 <script type="text/javascript" src="../lib/simpleInheritance.js"></script>
 <script type="text/javascript" src="lib/EventListener.js"></script>
 
-<script type="text/javascript" src="lib/World.js"></script>
+<script type="text/javascript" src="lib/createjs.World.js"></script>
 </head>
 
 <body>
