Rename World.container to (stnd) World.displayObject

--- a/world.html
+++ b/world.html
@@ -40,7 +40,7 @@ var world = new World({
 	pattern: 'textures/sand.png',
 	scrollBounds: 10
 });
-stage.addChild(world.container);
+stage.addChild(world.displayObject);
 </script>
 </body>
 </html>
