Optimized Entity movement with some help from the Coordinates class

--- a/mario2.html
+++ b/mario2.html
@@ -11,6 +11,7 @@
 <script type="text/javascript" src="../lib/backbone.marionette.js"></script>
 <script type="text/javascript" src="../lib/simpleInheritance.js"></script>
 <script type="text/javascript" src="lib/EventListener.js"></script>
+<script type="text/javascript" src="lib/Coordinates.js"></script>
 
 <script type="text/javascript" src="lib/createjs.World.js"></script>
 <script type="text/javascript" src="lib/createjs.Entity.js"></script>
