Created passive objects. Maybe some other stuff since I was in Charleston, that I forget about.
Right now, I'm trying to manage collision detection. Issue is the d/o's don't have width/height. Will try giving my entities "feet" (collision areas)

--- a/mario2.html
+++ b/mario2.html
@@ -12,6 +12,7 @@
 <script type="text/javascript" src="../lib/simpleInheritance.js"></script>
 <script type="text/javascript" src="lib/EventListener.js"></script>
 <script type="text/javascript" src="lib/Coordinates.js"></script>
+<script type="text/javascript" src="lib/ndgmr.Collision.js"></script>
 
 <script type="text/javascript" src="lib/createjs.World.js"></script>
 <script type="text/javascript" src="lib/createjs.Entity.js"></script>
@@ -19,6 +20,7 @@
 
 <script type="text/javascript" src="Game/Game.js"></script>
 <script type="text/javascript" src="Game/Game.Mario.js"></script>
+<script type="text/javascript" src="Game/Game.passiveObjects.js"></script>
 </head>
 
 <body>
