Utility namespace Includes methods for randomSpawn

--- a/mario2.html
+++ b/mario2.html
@@ -17,6 +17,7 @@
 <script type="text/javascript" src="lib/createjs.World.js"></script>
 <script type="text/javascript" src="lib/createjs.Entity.js"></script>
 <script type="text/javascript" src="lib/createjs.Hero.js"></script>
+<script type="text/javascript" src="lib/createjs.Utility.js"></script>
 
 <script type="text/javascript" src="Game/Game.js"></script>
 <script type="text/javascript" src="Game/Game.Mario.js"></script>
