--- a/mario2.html
+++ b/mario2.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-
+<h5 id="fps"></h5>
 <canvas id="stage" width="800" height="600" style="display: block; margin:50px auto; outline:1px dashed #ccc" oncontextmenu="return false"></canvas>
 <script type="text/javascript">
 $(document).ready(function() {
