Added all the necessary vendor libraries

--- a/mario.html
+++ b/mario.html
@@ -3,13 +3,13 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>EaselJS - Mario</title>
-<script type="text/javascript" src="../lib/easeljs.min.js"></script>
-<script type="text/javascript" src="../lib/tweenjs.min.js"></script>
-<script type="text/javascript" src="../lib/jquery.js"></script>
-<script type="text/javascript" src="../lib/underscore.js"></script>
-<script type="text/javascript" src="../lib/backbone.js"></script>
-<script type="text/javascript" src="../lib/backbone.marionette.js"></script>
-<script type="text/javascript" src="../lib/simpleInheritance.js"></script>
+<script type="text/javascript" src="lib/easeljs.min.js"></script>
+<script type="text/javascript" src="lib/tweenjs.min.js"></script>
+<script type="text/javascript" src="lib/jquery.js"></script>
+<script type="text/javascript" src="lib/underscore.js"></script>
+<script type="text/javascript" src="lib/backbone.js"></script>
+<script type="text/javascript" src="lib/backbone.marionette.js"></script>
+<script type="text/javascript" src="lib/simpleInheritance.js"></script>
 <script type="text/javascript" src="lib/EventListener.js"></script>
 <script type="text/javascript" src="lib/Coordinates.js"></script>
 <script type="text/javascript" src="lib/ndgmr.Collision.js"></script>
