Moved all third-part javascript libraries to lib/vendor/

--- a/mario.html
+++ b/mario.html
@@ -3,16 +3,15 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>EaselJS - Mario</title>
-<script type="text/javascript" src="lib/easeljs.min.js"></script>
-<script type="text/javascript" src="lib/tweenjs.min.js"></script>
-<script type="text/javascript" src="lib/jquery.js"></script>
-<script type="text/javascript" src="lib/underscore.js"></script>
-<script type="text/javascript" src="lib/backbone.js"></script>
-<script type="text/javascript" src="lib/backbone.marionette.js"></script>
-<script type="text/javascript" src="lib/simpleInheritance.js"></script>
+<script type="text/javascript" src="lib/vendor/easeljs.min.js"></script>
+<script type="text/javascript" src="lib/vendor/tweenjs.min.js"></script>
+<script type="text/javascript" src="lib/vendor/jquery.js"></script>
+<script type="text/javascript" src="lib/vendor/underscore.js"></script>
+<script type="text/javascript" src="lib/vendor/backbone.js"></script>
+<script type="text/javascript" src="lib/vendor/backbone.marionette.js"></script>
+<script type="text/javascript" src="lib/vendor/simpleInheritance.js"></script>
 <script type="text/javascript" src="lib/EventListener.js"></script>
 <script type="text/javascript" src="lib/Coordinates.js"></script>
-<script type="text/javascript" src="lib/ndgmr.Collision.js"></script>
 
 <script type="text/javascript" src="lib/createjs.World.js"></script>
 <script type="text/javascript" src="lib/createjs.Entity.js"></script>
