Refactor GameObject / Entity hierarchy To distinguish between passive and active objects and create a base class (GameObject) for all object Passive objects with bmp d/o's allows many more object in my world.

--- a/mario.html
+++ b/mario.html
@@ -13,7 +13,9 @@
 <script type="text/javascript" src="lib/EventListener.js"></script>
 <script type="text/javascript" src="lib/Coordinates.js"></script>
 
+<script type="text/javascript" src="lib/createjs.GameObject.js"></script>
 <script type="text/javascript" src="lib/createjs.World.js"></script>
+<script type="text/javascript" src="lib/createjs.PassiveObject.js"></script>
 <script type="text/javascript" src="lib/createjs.Entity.js"></script>
 <script type="text/javascript" src="lib/createjs.Hero.js"></script>
 <script type="text/javascript" src="lib/createjs.Utility.js"></script>
