--- a/mario.html
+++ b/mario.html
@@ -17,6 +17,7 @@
 <script type="text/javascript" src="lib/createjs.World.js"></script>
 <script type="text/javascript" src="lib/createjs.PassiveObject.js"></script>
 <script type="text/javascript" src="lib/createjs.Entity.js"></script>
+<script type="text/javascript" src="lib/createjs.AiEntity.js"></script>
 <script type="text/javascript" src="lib/createjs.Hero.js"></script>
 <script type="text/javascript" src="lib/createjs.Utility.js"></script>
 
